# Quicker

./: README.md  pyproject.toml  pytest.ini
TestData/: EnvironmentDetails.py  SearchData.py
pageObjects/: Google.py
report/: output.json  report.html
report/archive/: output_1683452365.881527.json  output_1684045718.430378.json  output_1684047668.173455.json  output_1684072254.1040099.json  output_1684072365.829088.json  output_1684072773.451217.json  output_1684073053.803742.json  output_1684073114.5755699.json  output_1684073233.999531.json  output_1684074965.393396.json  output_1684074999.765693.json  output_1684075775.232897.json  output_1684076391.606543.json
tests/: conftest.py  test_search.py
utilities/: BaseClass.py  log.py
